--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -20,6 +20,13 @@ neu:
   wird verhindert, dass man eine Folge nur wegen eines fehlerhaften EPGs verpasst.
 - Suchtimer: Falls der Datei-Eintrag eines Timers leer ist oder "!^invalid^!" enthält,
   wird er für die Programmierung übersprungen.
+- Wiederholung vermeiden: 'Vergleiche Untertitel' hat nun eine dritte Variante 'falls 
+  vorhanden' neben 'nein' und 'ja'. Damit stuft epgsearch zwei Sendungen nur dann als 
+  identisch ein, wenn die Episodennamen gleich sind und nicht leer. Vorsicht: Wenn die 
+  EPG-Daten keine Untertitel für unterschiedliche Folgen enthalten, sollte diese Option
+  nicht verwendet werden. 'ja' ist in diesem Fall besser, selbst wenn dadurch doppelt 
+  aufgezeichnet werden kann.
+
 fixes:
 - Absturz beim Drücken von 'Ok' in leerem Menü erledigter Timer behoben
 - Absturz bei Verwendung des Fortschrittsbalkens in Verbindung mit Sendungen
