--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2008-12-03 18:23+0100\n"
+"POT-Creation-Date: 2009-01-03 20:30+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -69,6 +69,9 @@ msgstr "Suche im EPG nach Wiederholungen und anderem"
 
 msgid "Program guide"
 msgstr "Programmführer"
+
+msgid "search timer update running"
+msgstr "Suchtimer-Update läuft"
 
 msgid "Direct access to epgsearch's search menu"
 msgstr "Direkter Zugriff auf epgsearch's Suchenmenu"
