--- a/po/es_ES.po
+++ b/po/es_ES.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2008-12-03 18:23+0100\n"
+"POT-Creation-Date: 2009-01-03 20:30+0100\n"
 "PO-Revision-Date: 2007-11-18 20:09+0200\n"
 "Last-Translator: bittor from open7x0.org <bittor7x0 _at_ gmail.com>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -69,6 +69,10 @@ msgstr "Buscar repeticiones en la EPG"
 
 msgid "Program guide"
 msgstr "Guía de Programación"
+
+#, fuzzy
+msgid "search timer update running"
+msgstr "¡Programación por búsqueda actualizada!"
 
 msgid "Direct access to epgsearch's search menu"
 msgstr "Acceso directo al menú de búsqueda EPGSearch"
