--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2008-12-03 18:23+0100\n"
+"POT-Creation-Date: 2009-01-03 20:30+0100\n"
 "PO-Revision-Date: 2008-04-30 08:36+0200\n"
 "Last-Translator: Patrice Staudt <patrice.staudt@laposte.net>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -72,6 +72,10 @@ msgstr "Recherche de répétition dans EPG"
 
 msgid "Program guide"
 msgstr "Guide du programme"
+
+#, fuzzy
+msgid "search timer update running"
+msgstr "La mise à jours de recherche est effectuée!"
 
 msgid "Direct access to epgsearch's search menu"
 msgstr "Accès direct dans epgsearch dans le menu recherche"
