--- a/HISTORY
+++ b/HISTORY
@@ -3,7 +3,7 @@ VDR Plugin 'epgsearch' Revision History
 
 2008-xx-xx; Version 0.9.25
 new:
-- Search timers now have a new action "Ask for switching". This announces the
+- Search timers now have a new action "Announce and switching". This announces the
   event via OSD right before it starts and lets you switch to its channel with 'Ok'.
   Switch timers now have the same option.
 - new internal variables:
