some fixes for the new 'announce and switch' property of search timers

--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-01-29 18:55+0100\n"
+"POT-Creation-Date: 2009-02-22 10:57+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -1201,8 +1201,8 @@ msgid "Search timer update done!"
 msgstr "Suchtimer-Update durchgeführt!"
 
 #, c-format
-msgid "%s starts: switch to?"
-msgstr "%s startet: Umschalten?"
+msgid "Switch to (%d) '%s'?"
+msgstr "Umschalten zu (%d) '%s'?"
 
 msgid "Programming timer failed!"
 msgstr "Timer-Programmierung fehlschlagen!"
@@ -1219,5 +1219,3 @@ msgstr "in %02ldh"
 msgid "in %02ldm"
 msgstr "in %02ldm"
 
-#~ msgid "Ask for switching"
-#~ msgstr "Umschalten erfragen?"
