--- a/po/et_EE.po
+++ b/po/et_EE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-01-29 18:55+0100\n"
+"POT-Creation-Date: 2009-02-22 10:57+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Arthur Konovalov <kasjas@hot.ee>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -1157,7 +1157,7 @@ msgid "Search timer update done!"
 msgstr ""
 
 #, c-format
-msgid "%s starts: switch to?"
+msgid "Switch to (%d) '%s'?"
 msgstr ""
 
 msgid "Programming timer failed!"
