--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -73,9 +73,8 @@ msgstr "Monipuolinen ohjelmaopas hakutoiminnolla"
 msgid "Program guide"
 msgstr "Ohjelmaopas"
 
-#, fuzzy
 msgid "search timer update running"
-msgstr "Hakuajastimet päivitetty!"
+msgstr "hakuajastimien päivitys käynnissä"
 
 msgid "Direct access to epgsearch's search menu"
 msgstr "Suoratoiminto EPGSearch-laajennoksen haulle"
@@ -954,9 +953,8 @@ msgstr "muistutus"
 msgid "Switch only"
 msgstr "kanavanvaihto"
 
-#, fuzzy
 msgid "Announce and switch"
-msgstr "muistutus"
+msgstr "muistutus ja kanavanvaihto"
 
 msgid "Selection"
 msgstr "valittu"
@@ -1043,9 +1041,8 @@ msgstr "Vaihda ... minuuttia ennen alkua"
 msgid "Unmute sound"
 msgstr "Ota mykistys pois päältä"
 
-#, fuzzy
 msgid "Ask ... minutes before start"
-msgstr "Vaihda ... minuuttia ennen alkua"
+msgstr "Kysy ... minuuttia ennen alkua"
 
 msgid "  Series recording"
 msgstr "  Sarjatallennus"
@@ -1164,13 +1161,11 @@ msgstr "Kirjoitetaanko olemassaolevan päälle?"
 msgid "Edit entry"
 msgstr "Muokkaa valintaa"
 
-#, fuzzy
 msgid "Switch"
 msgstr "kanavanvaihto"
 
-#, fuzzy
 msgid "Announce ... minutes before start"
-msgstr "Vaihda ... minuuttia ennen alkua"
+msgstr "Muistuta ... minuuttia ennen alkua"
 
 msgid "action at"
 msgstr "Kellonaika kanavanvaihdolle"
@@ -1211,7 +1206,7 @@ msgstr "Hakuajastimet päivitetty!"
 
 #, c-format
 msgid "Switch to (%d) '%s'?"
-msgstr ""
+msgstr "Vaihdetaanko kanavalle (%d) '%s'?"
 
 msgid "Programming timer failed!"
 msgstr "Ajastimen ohjelmointi epäonnistui!"
@@ -1227,11 +1222,3 @@ msgstr "%02ldh"
 #, c-format
 msgid "in %02ldm"
 msgstr "%02ldm"
-
-#, fuzzy
-#~ msgid "%s starts: switch to?"
-#~ msgstr "Lisätäänkö kanavanvaihtolistalle?"
-
-#, fuzzy
-#~ msgid "Ask for switching"
-#~ msgstr "Lisätäänkö kanavanvaihtolistalle?"
