--- a/HISTORY
+++ b/HISTORY
@@ -10,8 +10,9 @@ new:
   * %day%, %month% and %year% which return the numeric day, month and year
     (with century) of an event
   * %chgrp% returns the VDR channel group name corresponding to an event    
-- french translation update, thanks to Patrice Staudt
+- in memory to pat: french translation update, thanks to Patrice Staudt
 - italian translation update, thanks to Diego Pierotto
+- finnish translation update, thanks to Rolf Ahrenberg
 - new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
   the summary of the current event. If any epgsearch menu is open a subsequent
   SVDRP call will close it again.
