avoid multiple announcements of the same event

--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -65,6 +65,9 @@ fixes:
 - Absturz beim Navigieren zu benutzerdef. EPG-Menüs behoben, die zwischenzeitlich schon
   in der Vergangenheit lagen, Danke an Mike Constabel für den Hinweis
 - Im Timer-Edit-Menu war das Menu zur Tagesauswahl nicht mehr sichtbar
+- Wurde eine Sendung von mehreren Suchtimern mit "Nur ankündigen" gefunden, wurde sie auch 
+  mehrfach gelistet, Danke an Andreas Mair für den Hinweis.
+
 
 2008-04-29: Version 0.9.24
 neu:
