--- a/HISTORY
+++ b/HISTORY
@@ -60,6 +60,9 @@ fixes:
 - fixed a segfault occurring when navigating to a userdefined epg menu that has expired
   in the meantime, thanks to Mike Constabel for reporting
 - the day selection menu in the timer edit menu was hidden
+- if an event was matched by multiple search timers with 'announce only' setting, it was
+  also listed more than once. Thanks to Andreas Mair for reporting.
+
 
 2008-04-29: Version 0.9.24
 new:
