--- a/HISTORY.DE
+++ b/HISTORY.DE
@@ -80,6 +80,7 @@ fixes:
 - Einige Speicherlecks korrigiert, Danke an Bittor Corl für einen Patch
 - Einige Korrekturen damit es mit gcc-4.4 compiliert, Danke an firefly@vdrportal für einen 
   Patch.
+- Falsche Man-Sektion einiger Man-Pages korrigiert, Danke an Ville Skyttä für den Patch.
 
 
 2008-04-29: Version 0.9.24
