--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -11,9 +11,9 @@ msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
 "POT-Creation-Date: 2009-04-09 19:51+0200\n"
-"PO-Revision-Date: 2007-08-14 20:21+0200\n"
-"Last-Translator: Rolf Ahrenberg <rahrenbe@cc.hut.fi>\n"
-"Language-Team: <vdr@linuxtv.org>\n"
+"PO-Revision-Date: 2009-07-19 23:22+0200\n"
+"Last-Translator: Ville Skyttä <ville.skytta@iki.fi>\n"
+"Language-Team:  <vdr@linuxtv.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -167,14 +167,14 @@ msgid "Help$Choose between 'Overview - Now' and 'Schedule' as start menu when th
 msgstr "Valitsee oletusnäytöksi joko tämänhetkisen yleiskatsauksen tai valitun kanavan ohjelmiston."
 
 msgid "Ok key"
-msgstr "'OK' näppäin"
+msgstr "OK-näppäin"
 
 msgid ""
 "Help$Choose here the behaviour of key 'Ok'. You can use it to display the summary or to switch to the corresponding channel.\n"
 "Note: the functionality of key 'blue' (Switch/Info/Search) depends on this setting."
 msgstr ""
-"Valitse toiminto 'OK' näppäimelle: näytä ohjelman tiedot tai vaihda kyseiselle kanavalle.\n"
-"Huomioi: sinisen näppäimen toiminto (Vaihda/Tiedot/Hae) riippuu tästä asetuksesta"
+"Valitse toiminto OK-näppäimelle: näytä ohjelman tiedot tai vaihda kyseiselle kanavalle.\n"
+"Huomioi: sinisen näppäimen toiminto (Vaihda/Tiedot/Hae) riippuu tästä asetuksesta."
 
 msgid "Red key"
 msgstr "Punainen näppäin"
@@ -184,7 +184,7 @@ msgid ""
 "(Can be toggled with key '0')"
 msgstr ""
 "Valitsee oletustoiminnon ('Tallenna' tai 'Komennot') punaiselle näppäimelle.\n"
-"Punaisen näppäimen toimintoa voidaan vaihtaa myös lennossa painamalla '0' näppäintä."
+"Punaisen näppäimen toimintoa voidaan vaihtaa myös lennossa painamalla näppäintä 0."
 
 msgid "Blue key"
 msgstr "Sininen näppäin"
@@ -194,7 +194,7 @@ msgid ""
 "(Can be toggled with key '0')"
 msgstr ""
 "Valitsee oletustoiminnon ('Valitse' tai 'Etsi') siniselle näppäimelle.\n"
-"Sinisen näppäimen toimintoa voidaan vaihtaa myös lennossa painamalla '0' näppäintä."
+"Sinisen näppäimen toimintoa voidaan vaihtaa myös lennossa painamalla näppäintä 0."
 
 msgid "Show progress in 'Now'"
 msgstr "Näytä aikajana 'Nyt'-sivulla"
@@ -214,7 +214,7 @@ msgid ""
 "\n"
 "(To completely define your own menu look please inspect the MANUAL)"
 msgstr ""
-"Näyttää kanavien numeroinnin tämänhetkisessä yleiskatsaksessa.\n"
+"Näyttää kanavien numeroinnin tämänhetkisessä yleiskatsauksessa.\n"
 "\n"
 "Lisätietoja valikon muokkauksesta löytyy MANUAL-tiedostosta."
 
@@ -222,7 +222,7 @@ msgid "Show channel separators"
 msgstr "Näytä kanavaerottimet"
 
 msgid "Help$Display VDR channel groups as separators between your channels in 'Overview - Now'."
-msgstr "Näyttää erottimet yleiskatsauksessa kanavaville."
+msgstr "Näyttää erottimet yleiskatsauksessa kanaville."
 
 msgid "Show day separators"
 msgstr "Näytä päiväerottimet"
@@ -252,7 +252,7 @@ msgid "Show channels without EPG"
 msgstr "Näytä ohjelmaoppaattomat kanavat"
 
 msgid "Help$Choose 'yes' here if you want to display channels without EPG in 'Overview - Now'. 'Ok' on these entries switches the channel."
-msgstr "Näyttää tämänhetkisessä yleiskatsauksessa myöskin kanavat, joilta ei löydy ohjelmatietoja. Voit vaihtaa tälläiselle kanavalle 'OK' näppäimellä."
+msgstr "Näyttää tämänhetkisessä yleiskatsauksessa myöskin kanavat, joilta ei löydy ohjelmatietoja. Voit vaihtaa tällaiselle kanavalle OK-näppäimellä."
 
 msgid "Time interval for FRew/FFwd [min]"
 msgstr "Oletusaikasiirtymä [min]"
@@ -264,13 +264,13 @@ msgid ""
 msgstr ""
 "Valitsee ohjelmaoppaan oletusaikasiirtymän pikakelausnäppäimille.\n"
 "\n"
-"Jos sinulla ei ole kyseisiä näppäimiä käytössäsi, voit asettaa kyseiset toiminnot vihreälle ja keltaiselle näppäimelle painamalla '0' näppäintä."
+"Jos sinulla ei ole kyseisiä näppäimiä käytössäsi, voit asettaa kyseiset toiminnot vihreälle ja keltaiselle näppäimelle painamalla näppäintä 0."
 
 msgid "Toggle Green/Yellow"
 msgstr "Käytä aikasiirtymää värinäppäimillä"
 
 msgid "Help$Specify if green and yellow shall also be switched when pressing '0'."
-msgstr "Määrittelee vaihdetaanko vihreän ja keltaisen näppäimen toimintoja painamalla '0' näppäintä."
+msgstr "Määrittelee vaihdetaanko vihreän ja keltaisen näppäimen toimintoja painamalla näppäintä 0."
 
 msgid "Show favorites menu"
 msgstr "Näytä suosikkivalikko"
@@ -321,7 +321,7 @@ msgstr ""
 "- hakemiston määritys\n"
 "- vapaasti määriteltävät viikonpäivät toistuville ajastimille\n"
 "- jakson nimen täydennys\n"
-"- erilaisten EPG-muuttujien tuki (kts. MANUAL-tiedostosta)"
+"- erilaisten EPG-muuttujien tuki (ks. MANUAL-tiedostosta)"
 
 msgid "Default recording dir"
 msgstr "Oletushakemisto tallenteille"
@@ -545,13 +545,13 @@ msgid "Auth user"
 msgstr "SMTP-käyttäjätunnus"
 
 msgid "Help$Specify the auth user, if this account needs authentication for SMTP."
-msgstr "Määrittelee käyttäjätunnuksen, jos SMTP-palvelimelle pitää autentikoida."
+msgstr "Määrittelee käyttäjätunnuksen, jos SMTP-palvelimelle pitää autentikoitua."
 
 msgid "Auth password"
 msgstr "SMTP-salasana"
 
 msgid "Help$Specify the auth password, if this account needs authentication for SMTP."
-msgstr "Määrittelee salasanan, jos SMTP-palvelimelle pitää autentikoida."
+msgstr "Määrittelee salasanan, jos SMTP-palvelimelle pitää autentikoitua."
 
 msgid "Mail account check failed!"
 msgstr "Sähköpostilaatikon tarkistus epäonnistui!"
@@ -1102,16 +1102,16 @@ msgid "less"
 msgstr "pienempi"
 
 msgid "less or equal"
-msgstr "pienempi tai yhtäsuuri"
+msgstr "pienempi tai yhtä suuri"
 
 msgid "greater"
 msgstr "suurempi"
 
 msgid "greater or equal"
-msgstr "suurempi tai yhtäsuuri"
+msgstr "suurempi tai yhtä suuri"
 
 msgid "equal"
-msgstr "yhtäsuuri"
+msgstr "yhtä suuri"
 
 msgid "not equal"
 msgstr "erisuuri"
@@ -1150,7 +1150,7 @@ msgid "Edit$Delete template?"
 msgstr "Poistetaanko mallipohja?"
 
 msgid "Overwrite existing entries?"
-msgstr "Kirjoitetaanko olemassaolevan päälle?"
+msgstr "Kirjoitetaanko olemassa olevan päälle?"
 
 msgid "Edit entry"
 msgstr "Muokkaa valintaa"
@@ -1216,5 +1216,4 @@ msgstr "%02ldh"
 #, c-format
 msgid "in %02ldm"
 msgstr "%02ldm"
-
 
