search timer mails can now be buffered and delayed

--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-09-20 09:51+0200\n"
+"POT-Creation-Date: 2009-09-21 19:28+0200\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -490,6 +490,16 @@ msgstr "Suchtimer-Benachrichtigung"
 
 msgid "Help$Set this to 'yes' if you want to get an email notification about the search timers that where programmed automatically in the background."
 msgstr "Hier mit 'Ja' auswählen, ob eine Email-Benachrichtigung über automatisch im Hintergrund programmierte Suchtimer versandt werden soll."
+
+msgid "Time between mails [h]"
+msgstr "Zeit zwischen Mails [h]"
+
+msgid ""
+"Help$Specifiy how much time in [h] you would\n"
+"like to have atleast between two mails.\n"
+"With '0' you get a new mail after each\n"
+"search timer update with new results."
+msgstr "Hier die gewünschte Zeit in [h] zwischen\nzwei Mails angeben. Mit '0' erhält man eine\nneue Mail nach jedem Suchtimer-Update\nmit neuen Ergebnissen."
 
 msgid "Timer conflict notification"
 msgstr "Timer-Konflikt-Benachrichtigung"
