--- a/INSTALL
+++ b/INSTALL
@@ -8,8 +8,8 @@ libpcre
 -------
 For support of Perl compatible regular expressions in a search you have to use
 libpcre:  
-simply edit the plugins Makefile and uncomment '#HAVE_PCREPOSIX=1' to
-'HAVE_PCREPOSIX=1' or append 'HAVE_PCREPOSIX=1' to your 'make plugins'
+simply edit the plugins Makefile and uncomment '#REGEXLIB = pcre' to
+'REGEXLIB = pcre' or append 'REGEXLIB=pcre' to your 'make plugins'
 call. (you will need pcreposix installed, comes with libpcre from
 www.pcre.org, but it's already part of most distributions
 HINT: if all compiles well, but after starting VDR you get:
@@ -20,7 +20,7 @@ update libpcre from www.pcre.org and recompile the plugin.
 
 There seems to be a problem with PCRE on some systems, that produce a crash
 when using regexp. Til now, I could not find the reason. So perhaps dont use
-HAVE_PCREPOSIX=1, if you don't really need it.
+REGEXLIB=pcre, if you don't really need it.
 
 libtre
 ------
@@ -29,7 +29,7 @@ search patterns with a maximum of 31 characters. This results in empty results
 if more than 31 characters are used. To avoid this limitation you can use the
 TRE package (http://laurikari.net/tre/). Install tre (on debian: 
 apt-get install tre-agrep libtre4 libtre-dev) and activate epgsearch's support
-for it in the Makefile by uncommenting '#HAVE_LIBTRE=1' to 'HAVE_LIBTRE=1' or append
+for it in the Makefile by uncommenting '#REGEXLIB = pcre' to 'REGEXLIB = tre' or append
 it to your 'make plugins' call. After recompiling epgsearch will now use an
 algorithm similiar to 'agrep' with no limits.
 
