--- a/INSTALL.DE
+++ b/INSTALL.DE
@@ -2,8 +2,8 @@ Hier gibt es nichts besonderes. Bitte wie jedes andere Standard-Plugin
 installieren (entpacken, soft link, make plugins). Eine kleine
 Besonderheit: Wer lieber mit Perl compatible regular expressions in
 der Suche arbeitet, sollte einfach im Makefile des Plugins
-#HAVE_PCREPOSIX=1 in HAVE_PCREPOSIX=1 ändern oder einfach
-HAVE_PCREPOSIX an den 'make plugins'-Aufruf anhängen. Hierzu muss pcreposix
+'#REGEXLIB = pcre' in 'REGEXLIB = pcre' ändern oder einfach
+REGEXLIB=pcre an den 'make plugins'-Aufruf anhängen. Hierzu muss pcreposix
 installiert sein, das in der libpcre von www.pcre.org enthalten ist.
 Dies sollte aber in den meisten Distributionen bereits enthalten sein.
 
@@ -18,5 +18,5 @@ kompilieren.
 Scheinbar gibt es auf manchen Systemen Probleme mit PCRE, die sich in einem
 Crash äußern, wenn man reg. Ausdrücke benutzt. Da ich die Ursache bisher
 nicht
-finden konnte, empfehle ich deshalb auf HAVE_PCREPOSIX=1 zu verzichten, wenn
+finden konnte, empfehle ich deshalb auf REGEXLIB=pcre zu verzichten, wenn
 es nicht unbedingt notwendig ist.
