new option the set the required match for 'compare summary'

--- a/HISTORY
+++ b/HISTORY
@@ -90,6 +90,7 @@ new:
 - epgsearch now also checks the recordings length among the correct start and stop time of a timer
   when testing for complete recordings. 98% and more are handled as complete. 
 - switch timers are now also visible in all search results EPG menus
+- Avoid repeats: in 'compare summary' one can now adjust the required match, default is 90%.
 
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
