--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-09-21 19:28+0200\n"
+"POT-Creation-Date: 2010-02-10 20:29+0100\n"
 "PO-Revision-Date: 2007-08-14 20:21+0200\n"
 "Last-Translator: Klaus Schmidinger <kls@cadsoft.de>\n"
 "Language-Team: <vdr@linuxtv.org>\n"
@@ -499,7 +499,11 @@ msgid ""
 "like to have atleast between two mails.\n"
 "With '0' you get a new mail after each\n"
 "search timer update with new results."
-msgstr "Hier die gewünschte Zeit in [h] zwischen\nzwei Mails angeben. Mit '0' erhält man eine\nneue Mail nach jedem Suchtimer-Update\nmit neuen Ergebnissen."
+msgstr ""
+"Hier die gewünschte Zeit in [h] zwischen\n"
+"zwei Mails angeben. Mit '0' erhält man eine\n"
+"neue Mail nach jedem Suchtimer-Update\n"
+"mit neuen Ergebnissen."
 
 msgid "Timer conflict notification"
 msgstr "Timer-Konflikt-Benachrichtigung"
@@ -1079,6 +1083,9 @@ msgstr "Vergleiche Untertitel"
 
 msgid "Compare summary"
 msgstr "Vergleiche Beschreibung"
+
+msgid "Min. match in %"
+msgstr "Min. Übereinstimmung in %"
 
 msgid "Compare categories"
 msgstr "Vergl. Kategorien"
