--- a/po/it_IT.po
+++ b/po/it_IT.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: VDR 1.5.7\n"
 "Report-Msgid-Bugs-To: <cwieninger@gmx.de>\n"
-"POT-Creation-Date: 2009-09-21 19:28+0200\n"
+"POT-Creation-Date: 2010-02-10 20:29+0100\n"
 "PO-Revision-Date: 2009-07-15 23:30+0100\n"
 "Last-Translator: Diego Pierotto <vdr-italian@tiscali.it>\n"
 "Language-Team:  <vdr@linuxtv.org>\n"
@@ -1089,6 +1089,10 @@ msgstr "Confronta sottotitolo"
 
 msgid "Compare summary"
 msgstr "Confronta sommario"
+
+#, fuzzy
+msgid "Min. match in %"
+msgstr "   Durata Minima"
 
 msgid "Compare categories"
 msgstr "Confronta categorie"
